# MaBoSS.GPU

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  MaBoSSG.py  README.md  singularity.def
cmake/: dumpbin.c  stringify.cmake
data/: generate-synth.py  metastasis.cfg
ign/statistics/: finals.cu  finals.h  stats.h  stats_composite.cpp  stats_composite.h  window_average.cu  window_average.h  window_average_small.cu  window_average_small.h
src/: cfg_config.h.generated  diagnostics.h  fixed_points.cu  generator.cpp  generator.h  kernel.h  kernel_compiler.cpp  kernel_compiler.h  main.cpp  main.cu  simulation.cu  simulation.h  simulation_runner.cu  simulation_runner.h  state.cpp  state.h  state_word.h  statistics.h  timer.cpp  timer.h  trajectory_status.h  transition_rates.cu.generated  transition_rates.cuh  transition_rates.h.generated  types.h  utils.cpp  utils.h  window_average.cu
src/jit_kernels/: final_states.cu  simulation.cu  window_average_small.cu
src/parser/: driver.cpp  driver.h  expressions.cpp  expressions.h  parse_types.cpp  parse_types.h  parser.yy  scanner.ll
src/statistics/: final_states.cpp  final_states.cu  final_states.h  finals.cu  finals.h  fixed_states.cu  fixed_states.h  stats.h  stats_composite.cpp  stats_composite.h  window_average.cu  window_average.h  window_average_small.cpp  window_average_small.cu  window_average_small.h
test/: Montagud2022_Prostate_Cancer.res  cellcycle.res  metastasis.res  sizek.res  test.cpp
